# reckon-box

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  railway.toml  requirements.txt
src/: app.py
src/domain_packs/: software_systems.yaml  software_systems_presets.py
src/modules/: ai_tutor.py  design_builder.py  design_reviewer.py  parameter_advisor.py  remediation_guide.py  scenario_parser.py  simulation_engine.py  teaching_cards.py  variant_identifier.py
src/utils/: blackbox_spec.py  design_spec.py
tests/: conftest.py  test_advanced_features.py  test_blackbox_spec.py  test_decision_tree.py  test_design_reviewer.py  test_design_spec.py  test_design_spec_strategies.py  test_domain_pack.py  test_engine_determinism.py  test_parameter_advisor.py  test_remediation_guide.py  test_scenario_driven_e2e.py  test_scenario_generator.py  test_scenario_parser.py  test_strategy_execution.py  test_teaching_cards.py  test_variant_identifier.py
