[project]
name = "reckon-box"
version = "0.1.0"
description = "ReckonBox - 建构主义教育沙盒，学生通过配置系统设计参数观察失败涌现"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "streamlit-flow-component>=1.6.1",
    "graphviz>=0.20",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "openai>=1.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
